20180118 JY : Additional Service 계산 시점 테이블 삭제 by 기획

--- a/2018_01_coworkers/task/trunk/stower/admin/contents/calculate/invoice_view.html
+++ b/2018_01_coworkers/task/trunk/stower/admin/contents/calculate/invoice_view.html
@@ -70,7 +70,8 @@
 							</tbody>
 						</table>
 						<h4 class="pageTitle">Additional Service</h4>
-						<table class="searchTable2">
+						<!-- 20180118 JY : Additional Service 계산 시점 테이블 삭제 by 기획 -->
+						<!-- <table class="searchTable2">
 							<tr>
 								<th>Additional Service 계산 시점</th>
 								<td class="taR pr0">
@@ -81,7 +82,7 @@
 									<a href="#none" class="btn2-1">적용</a>
 								</td>
 							</tr>
-						</table>
+						</table> -->
 						<table class="writeTable2">
 							<colgroup><col width="15%"><col width="15%"><col width="15%"><col width="22%"><col width="13%"><col width="20%"></colgroup>
 							<thead>
